[tool.poetry]
name = "sarcasm-demo"
version = "0.1.0"
description = "CS3244 demo"
authors = ["shaokiat <shaokiat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
