[tool.poetry]
name = "cs3244-demo"
version = "0.1.0"
description = ""
authors = ["shaokiat <shaokiat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.2.0"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
